crates/aivi-core/tests/snapshots/snapshots__snapshot_core_func_module.snap
---
source: crates/aivi-core/tests/snapshots.rs
assertion_line: 35
expression: core.pretty()
---
func add:
  params = [x: Int, y: Int]
  body = #0 Add #1
func __aivi_option_getOrElse:
  params = [fallback: A, opt: Option A]
  body = #3 ||> Some item => #4 ||> None => #2
func __aivi_list_keepSome:
  params = [item: A]
  body = Some #5
func __aivi_result_withDefault:
  params = [fallback: A, result: Result E A]
  body = #7 ||> Ok item => #8 ||> Err _ => #6
func __aivi_list_keepFirst:
  params = [found: Option A, item: A]
  body = #9 T|>[Some] __aivi_list_keepSome _ F|>[None] Some #10
func __aivi_list_lengthStep:
  params = [total: Int, item: A]
  body = #11 Add 1
func __aivi_list_length:
  params = [items: List A]
  body = #13 |> Reduce(List) __aivi_list_lengthStep 0 _
func __aivi_list_head:
  params = [items: List A]
  body = #14 |> Reduce(List) __aivi_list_keepFirst None _
func __aivi_list_tailState:
  params = [items: List A, item: A, seenFirst: Bool]
  body = #17 T|>[True] {seenFirst: True, items: Append(List) #15 [#16]} F|>[False] {seenFirst: True, items: []}
func __aivi_list_tailStep:
  params = [state: { seenFirst: Bool, items: List A }, item: A]
  body = #18 ||> {seenFirst: seenFirst, items: items} => __aivi_list_tailState #21 #19 #20
func __aivi_list_tailItems:
  params = [items: List A, seenFirst: Bool]
  body = #23 T|>[True] Some #22 F|>[False] None
func __aivi_list_tailFromState:
  params = [state: { seenFirst: Bool, items: List A }]
  body = #24 ||> {seenFirst: seenFirst, items: items} => __aivi_list_tailItems #26 #25
func __aivi_list_tail:
  params = [items: List A]
  body = #27 |> Reduce(List) __aivi_list_tailStep {seenFirst: False, items: []} _ |> __aivi_list_tailFromState _
func __aivi_list_tailOrEmpty:
  params = [items: List A]
  body = __aivi_list_tail #28 ||> Some remaining => #29 ||> None => []
func __aivi_list_nonEmpty:
  params = [items: List A]
  body = __aivi_list_head #30 T|>[Some] True F|>[None] False
func __aivi_list_anyStep:
  params = [predicate: A -> Bool, found: Bool, item: A]
  body = #32 T|>[True] True F|>[False] #31 #33
func __aivi_list_any:
  params = [predicate: A -> Bool, items: List A]
  body = #35 |> Reduce(List) __aivi_list_anyStep #34 False _
func __aivi_binary_eq:
  params = [left: A, right: A]
  body = #36 Equals #37
func __aivi_binary_neq:
  params = [left: A, right: A]
  body = #38 NotEquals #39
func __aivi_nel_singleton:
  params = [item: A]
  body = domain#47::member#0::lift [#41]
func __aivi_nel_cons:
  params = [item: A, nel: NonEmptyList A]
  body = domain#47::member#0::lift Append(List) [#42] NonEmptyList.carrier #43
func __aivi_nel_head:
  params = [nel: NonEmptyList A]
  body = NonEmptyList.carrier #44 ||> [h, ...ignored] => #45
func __aivi_nel_toList:
  params = [nel: NonEmptyList A]
  body = NonEmptyList.carrier #47
func __aivi_nel_fromHeadTail:
  params = [h: A, t: List A]
  body = domain#47::member#0::lift Append(List) [#48] #49
func __aivi_nel_length:
  params = [nel: NonEmptyList A]
  body = __aivi_list_length NonEmptyList.carrier #50
func __aivi_nel_lastStep:
  params = [prev: A, item: A]
  body = #52
func __aivi_nel_lastOf:
  params = [h: A, t: List A]
  body = #54 |> Reduce(List) __aivi_nel_lastStep #53 _
func __aivi_nel_last:
  params = [nel: NonEmptyList A]
  body = NonEmptyList.carrier #55 ||> [h, ...t] => __aivi_nel_lastOf #56 #57
func __aivi_nel_mapNel:
  params = [transform: A -> B, nel: NonEmptyList A]
  body = domain#47::member#0::lift __aivi_list_map #58 NonEmptyList.carrier #59
func __aivi_nel_appendNel:
  params = [left: NonEmptyList A, right: NonEmptyList A]
  body = domain#47::member#0::lift Append(List) NonEmptyList.carrier #60 NonEmptyList.carrier #61
func __aivi_nel_initAppendPrev:
  params = [items: List A, prev: Option A]
  body = #63 ||> Some p => Append(List) #62 [#64] ||> None => #62
func __aivi_nel_initAccum:
  params = [items: List A, prev: Option A, item: A]
  body = (__aivi_nel_initAppendPrev #65 #66, Some #67)
func __aivi_nel_initStep:
  params = [state: (List A, Option A), item: A]
  body = #68 ||> (items, prev) => __aivi_nel_initAccum #70 #71 #69
func __aivi_nel_initExtract:
  params = [state: (List A, Option A)]
  body = #72 ||> (items, prev) => #73
func __aivi_nel_init:
  params = [nel: NonEmptyList A]
  body = NonEmptyList.carrier #75 |> Reduce(List) __aivi_nel_initStep ([], None) _ |> __aivi_nel_initExtract _
func __aivi_nel_fromListStep:
  params = [acc: Option NonEmptyList A, item: A]
  body = #76 ||> None => Some domain#47::member#0::lift [#77] ||> Some nel => Some domain#47::member#0::lift Append(List) NonEmptyList.carrier #78 [#77]
func __aivi_nel_fromList:
  params = [items: List A]
  body = #79 |> Reduce(List) __aivi_nel_fromListStep None _
func __aivi_option_map:
  params = [transform: A -> B, opt: Option A]
  body = #81 ||> Some item => Some #80 #82 ||> None => None
func __aivi_list_contains:
  params = [predicate: A -> Bool, items: List A]
  body = __aivi_list_any #83 #84
func __aivi_list_mapStep:
  params = [transform: A -> B, acc: List B, item: A]
  body = Append(List) #86 [#85 #87]
func __aivi_list_map:
  params = [transform: A -> B, items: List A]
  body = #89 |> Reduce(List) __aivi_list_mapStep #88 [] _
func __aivi_list_flatMapStep:
  params = [transform: A -> List B, acc: List B, item: A]
  body = Append(List) #91 #90 #92
func __aivi_list_flatMap:
  params = [transform: A -> List B, items: List A]
  body = #94 |> Reduce(List) __aivi_list_flatMapStep #93 [] _
func __aivi_list_filterAppend:
  params = [predicate: A -> Bool, acc: List A, item: A]
  body = #95 #97 T|>[True] Append(List) #96 [#97] F|>[False] #96
func __aivi_list_filter:
  params = [predicate: A -> Bool, items: List A]
  body = #99 |> Reduce(List) __aivi_list_filterAppend #98 [] _
func __aivi_list_countStep:
  params = [predicate: A -> Bool, acc: Int, item: A]
  body = #100 #102 T|>[True] #101 Add 1 F|>[False] #101
func __aivi_list_count:
  params = [predicate: A -> Bool, items: List A]
  body = #104 |> Reduce(List) __aivi_list_countStep #103 0 _
func __aivi_list_sumStep:
  params = [acc: Int, item: Int]
  body = #105 Add #106
func __aivi_list_sum:
  params = [items: List Int]
  body = #107 |> Reduce(List) __aivi_list_sumStep 0 _
func __aivi_list_maxPick:
  params = [gt: A -> A -> Bool, item: A, prev: A]
  body = #108 #109 #110 T|>[True] Some #109 F|>[False] Some #110
func __aivi_list_maximumStep:
  params = [gt: A -> A -> Bool, best: Option A, item: A]
  body = #112 ||> None => Some #113 ||> Some prev => __aivi_list_maxPick #111 #113 #114
func __aivi_list_maximum:
  params = [gt: A -> A -> Bool, items: List A]
  body = #116 |> Reduce(List) __aivi_list_maximumStep #115 None _
func __aivi_list_rangeDesc:
  params = [current: Int, acc: List Int]
  body = #117 LessThan 0 T|>[True] #118 F|>[False] __aivi_list_rangeDesc #117 Subtract 1 Append(List) [#117] #118
func __aivi_list_range:
  params = [n: Int]
  body = #119 LessThanOrEqual 0 T|>[True] [] F|>[False] __aivi_list_rangeDesc #119 Subtract 1 []
func __aivi_text_joinFirst:
  params = [sep: Text, result: Text, item: Text]
  body = (False, #122)
func __aivi_text_joinNext:
  params = [sep: Text, result: Text, item: Text]
  body = (False, Append(Text) Append(Text) #124 #123 #125)
func __aivi_text_joinPick:
  params = [isFirst: Bool, sep: Text, result: Text, item: Text]
  body = #126 T|>[True] __aivi_text_joinFirst #127 #128 #129 F|>[False] __aivi_text_joinNext #127 #128 #129
func __aivi_text_joinStep:
  params = [sep: Text, state: (Bool, Text), item: Text]
  body = #131 ||> (isFirst, result) => __aivi_text_joinPick #133 #130 #134 #132
func __aivi_text_joinExtract:
  params = [state: (Bool, Text)]
  body = #135 ||> (isFirst, result) => #137
func __aivi_text_join:
  params = [sep: Text, items: List Text]
  body = #139 |> Reduce(List) __aivi_text_joinStep #138 (True, "") _ |> __aivi_text_joinExtract _
func __aivi_matrix_rows:
  params = [matrix: Matrix A]
  body = #140 ||> MkMatrix w h data => #143
func __aivi_matrix_width:
  params = [matrix: Matrix A]
  body = #144 ||> MkMatrix w h data => #145
func __aivi_matrix_height:
  params = [matrix: Matrix A]
  body = #148 ||> MkMatrix w h data => #150
func __aivi_listAt_match:
  params = [matches: Bool, idx: Int, item: A]
  body = #152 T|>[True] (#153 Add 1, Some #154) F|>[False] (#153 Add 1, None)
func __aivi_listAt_check:
  params = [target: Int, idx: Int, found: Option A, item: A]
  body = #157 ||> Some already => (#156 Add 1, Some #159) ||> None => __aivi_listAt_match #156 Equals #155 #156 #158
func __aivi_listAt_step:
  params = [target: Int, state: (Int, Option A), item: A]
  body = #161 ||> (idx, found) => __aivi_listAt_check #160 #163 #164 #162
func __aivi_listAt_extract:
  params = [state: (Int, Option A)]
  body = #165 ||> (idx, found) => #167
func __aivi_listAt:
  params = [target: Int, items: List A]
  body = #169 |> Reduce(List) __aivi_listAt_step #168 (0, None) _ |> __aivi_listAt_extract _
func __aivi_matrix_atRow:
  params = [rowOpt: Option List A, x: Int]
  body = #170 ||> Some row => __aivi_listAt #171 #172 ||> None => None
func __aivi_matrix_at:
  params = [matrix: Matrix A, x: Int, y: Int]
  body = #173 ||> MkMatrix w h data => __aivi_matrix_atRow __aivi_listAt #175 #178 #174
func __aivi_listReplace_pick:
  params = [matches: Bool, newVal: A, idx: Int, result: List A, item: A]
  body = #179 T|>[True] (#181 Add 1, Append(List) #182 [#180]) F|>[False] (#181 Add 1, Append(List) #182 [#183])
func __aivi_listReplace_check:
  params = [target: Int, newVal: A, idx: Int, result: List A, item: A]
  body = __aivi_listReplace_pick #186 Equals #184 #185 #186 #187 #188
func __aivi_listReplace_step:
  params = [target: Int, newVal: A, state: (Int, List A), item: A]
  body = #191 ||> (idx, result) => __aivi_listReplace_check #189 #190 #193 #194 #192
func __aivi_listReplace_extract:
  params = [state: (Int, List A)]
  body = #195 ||> (idx, result) => #197
func __aivi_listReplace:
  params = [target: Int, newVal: A, items: List A]
  body = #200 |> Reduce(List) __aivi_listReplace_step #198 #199 (0, []) _ |> __aivi_listReplace_extract _
func __aivi_matrix_doReplace:
  params = [x: Int, y: Int, w: Int, h: Int, data: List List A, value: A]
  body = __aivi_listAt #202 #205 ||> Some row => Some Matrix.MkMatrix #203 #204 __aivi_listReplace #202 __aivi_listReplace #201 #206 #207 #205 ||> None => None
func __aivi_matrix_boundsCheck:
  params = [xOk: Bool, yOk: Bool, xLt: Bool, yLt: Bool, x: Int, y: Int, w: Int, h: Int, data: List List A, value: A]
  body = #208 T|>[True] __aivi_matrix_boundsCheck2 #209 #210 #211 #212 #213 #214 #215 #216 #217 F|>[False] None
func __aivi_matrix_boundsCheck2:
  params = [yOk: Bool, xLt: Bool, yLt: Bool, x: Int, y: Int, w: Int, h: Int, data: List List A, value: A]
  body = #218 T|>[True] __aivi_matrix_boundsCheck3 #219 #220 #221 #222 #223 #224 #225 #226 F|>[False] None
func __aivi_matrix_boundsCheck3:
  params = [xLt: Bool, yLt: Bool, x: Int, y: Int, w: Int, h: Int, data: List List A, value: A]
  body = #227 T|>[True] __aivi_matrix_boundsCheck4 #228 #229 #230 #231 #232 #233 #234 F|>[False] None
func __aivi_matrix_boundsCheck4:
  params = [yLt: Bool, x: Int, y: Int, w: Int, h: Int, data: List List A, value: A]
  body = #235 T|>[True] __aivi_matrix_doReplace #236 #237 #238 #239 #240 #241 F|>[False] None
func __aivi_matrix_replaceCoord:
  params = [matrix: Matrix A, x: Int, y: Int, value: A]
  body = #242 ||> MkMatrix w h data => __aivi_matrix_boundsCheck #243 GreaterThanOrEqual 0 #244 GreaterThanOrEqual 0 #243 LessThan #246 #244 LessThan #247 #243 #244 #246 #247 #248 #245
func __aivi_matrix_replaceAt:
  params = [matrix: Matrix A, coord: (Int, Int), value: A]
  body = #250 ||> (x, y) => __aivi_matrix_replaceCoord #249 #252 #253 #251
func __aivi_matrix_validateFirstRow:
  params = [rowIdx: Int, expectedWidth: Int, row: List A]
  body = (1, __aivi_list_length #256, None)
func __aivi_matrix_validateLengthMatch:
  params = [matches: Bool, rowIdx: Int, expectedWidth: Int, row: List A]
  body = #257 T|>[True] (#258 Add 1, #259, None) F|>[False] (#258 Add 1, #259, Some MatrixError.RaggedRows #258 #259 __aivi_list_length #260)
func __aivi_matrix_validateSubsequentRow:
  params = [isFirst: Bool, rowIdx: Int, expectedWidth: Int, row: List A]
  body = #261 T|>[True] __aivi_matrix_validateFirstRow #262 #263 #264 F|>[False] __aivi_matrix_validateLengthMatch __aivi_list_length #264 Equals #263 #262 #263 #264
func __aivi_matrix_validateRow:
  params = [prevError: Option MatrixError, rowIdx: Int, expectedWidth: Int, row: List A]
  body = #265 ||> Some e => (#266 Add 1, #267, Some #269) ||> None => __aivi_matrix_validateSubsequentRow #266 Equals 0 #266 #267 #268
func __aivi_matrix_fromRowsStep:
  params = [state: (Int, Int, Option MatrixError), row: List A]
  body = #270 ||> (rowIdx, width, error) => __aivi_matrix_validateRow #274 #272 #273 #271
func __aivi_matrix_fromRowsDecide:
  params = [error: Option MatrixError, rowCount: Int, width: Int, inputRows: List List A]
  body = #275 ||> Some e => Err #279 ||> None => Ok Matrix.MkMatrix #277 #276 #278
func __aivi_matrix_fromRowsFinish:
  params = [inputRows: List List A, state: (Int, Int, Option MatrixError)]
  body = #281 ||> (rowCount, width, error) => __aivi_matrix_fromRowsDecide #284 #282 #283 #280
func __aivi_matrix_fromRows:
  params = [inputRows: List List A]
  body = #285 |> Reduce(List) __aivi_matrix_fromRowsStep (0, 0, None) _ |> __aivi_matrix_fromRowsFinish #285 _
func __aivi_matrix_initCellAt:
  params = [build: Int -> Int -> A, y: Int, x: Int]
  body = #286 #288 #287
func __aivi_matrix_buildRow:
  params = [width: Int, build: Int -> Int -> A, y: Int]
  body = __aivi_list_map __aivi_matrix_initCellAt #290 #291 __aivi_list_range #289
func __aivi_matrix_buildRows:
  params = [width: Int, height: Int, build: Int -> Int -> A]
  body = __aivi_list_map __aivi_matrix_buildRow #292 #294 __aivi_list_range #293
func __aivi_matrix_initHeight:
  params = [width: Int, height: Int, build: Int -> Int -> A]
  body = #296 LessThan 0 T|>[True] Err MatrixError.NegativeHeight #296 F|>[False] Ok Matrix.MkMatrix #295 #296 __aivi_matrix_buildRows #295 #296 #297
func __aivi_matrix_init:
  params = [width: Int, height: Int, build: Int -> Int -> A]
  body = #298 LessThan 0 T|>[True] Err MatrixError.NegativeWidth #298 F|>[False] __aivi_matrix_initHeight #298 #299 #300
func __aivi_matrix_filled:
  params = [w: Int, h: Int, build: Int -> Int -> A]
  body = #301 LessThan 0 Or #302 LessThan 0 T|>[True] Matrix.MkMatrix 0 0 [] F|>[False] Matrix.MkMatrix #301 #302 __aivi_matrix_buildRows #301 #302 #303
func __aivi_matrix_countCell:
  params = [predicate: A -> Bool, total: Int, item: A]
  body = #304 #306 T|>[True] #305 Add 1 F|>[False] #305
func __aivi_matrix_countRow:
  params = [predicate: A -> Bool, total: Int, row: List A]
  body = Reduce(List) __aivi_matrix_countCell #307 #308 #309
func __aivi_matrix_count:
  params = [predicate: A -> Bool, matrix: Matrix A]
  body = Reduce(List) __aivi_matrix_countRow #310 0 __aivi_matrix_rows #311
func __aivi_list_findTry:
  params = [predicate: A -> Bool, item: A]
  body = #312 #313 T|>[True] Some #313 F|>[False] None
func __aivi_list_findStep:
  params = [predicate: A -> Bool, acc: Option A, item: A]
  body = #315 ||> Some v => Some #317 ||> None => __aivi_list_findTry #314 #316
func __aivi_list_find:
  params = [predicate: A -> Bool, items: List A]
  body = #319 |> Reduce(List) __aivi_list_findStep #318 None _
func __aivi_list_takeHelp:
  params = [n: Int, count: Int, acc: List A, item: A]
  body = #321 GreaterThanOrEqual #320 T|>[True] (#321, #322) F|>[False] (#321 Add 1, Append(List) #322 [#323])
func __aivi_list_takeStep:
  params = [n: Int, state: (Int, List A), item: A]
  body = #325 ||> (count, acc) => __aivi_list_takeHelp #324 #327 #328 #326
func __aivi_list_takeExtract:
  params = [state: (Int, List A)]
  body = #329 ||> (_, acc) => #330
func __aivi_list_take:
  params = [n: Int, items: List A]
  body = #332 |> Reduce(List) __aivi_list_takeStep #331 (0, []) _ |> __aivi_list_takeExtract _
func __aivi_list_sortByInsertFalse:
  params = [cmp: A -> A -> Bool, newItem: A, current: A, acc: List A]
  body = #333 #334 #335 T|>[True] (True, Append(List) Append(List) #336 [#334] [#335]) F|>[False] (False, Append(List) #336 [#335])
func __aivi_list_sortByInsertStep:
  params = [cmp: A -> A -> Bool, newItem: A, state: (Bool, List A), current: A]
  body = #339 ||> (True, acc) => (True, Append(List) #341 [#340]) ||> (False, acc) => __aivi_list_sortByInsertFalse #337 #338 #340 #342
func __aivi_list_sortByInsertFinish:
  params = [cmp: A -> A -> Bool, newItem: A, state: (Bool, List A)]
  body = #345 ||> (True, result) => #346 ||> (False, acc) => Append(List) #347 [#344]
func __aivi_list_sortByInsert:
  params = [cmp: A -> A -> Bool, newItem: A, sorted: List A]
  body = #350 |> Reduce(List) __aivi_list_sortByInsertStep #348 #349 (False, []) _ |> __aivi_list_sortByInsertFinish #348 #349 _
func __aivi_list_sortByStep:
  params = [cmp: A -> A -> Bool, sorted: List A, item: A]
  body = __aivi_list_sortByInsert #351 #353 #352
func __aivi_list_sortBy:
  params = [cmp: A -> A -> Bool, items: List A]
  body = #355 |> Reduce(List) __aivi_list_sortByStep #354 [] _
func __aivi_text_isEmpty:
  params = [text: Text]
  body = #356 Equals ""
func __aivi_text_nonEmpty:
  params = [text: Text]
  body = #357 Equals "" T|>[True] False F|>[False] True
func domain#47::member#0::lift:
  params = [items: List A]
  body = #40
